--- a/app/src/main/res/drawable/button_bg_round.xml
+++ b/app/src/main/res/drawable/button_bg_round.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <stroke android:color="#1E90FF" android:width="5dp" />
+            <stroke android:width="1dp" android:color="#26282b" />
             <solid android:color="#87CEEB"/>
             <size android:width="150dp" android:height="150dp"/>
         </shape>
