--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -1,44 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".TestActivity">
 
 
-    <com.wonderkiln.camerakit.CameraView
+    <com.otaliastudios.cameraview.CameraView
         android:id="@+id/camera"
-        android:layout_width="match_parent"
-        android:layout_height="450dp"
-        app:ckCropOutput="false"
-        app:ckDoubleTapToToggleFacing="true"
-        app:ckFacing="back"
-        app:ckFlash="off"
-        app:ckFocus="tapWithMarker"
-        app:ckJpegQuality="100"
-        app:ckMethod="standard"
-        app:ckPinchToZoom="true"
-        app:ckVideoQuality="highest"
-        app:ckZoom="2.0" />
-
+        android:keepScreenOn="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/capture"
-        android:layout_width="90dp"
-        android:layout_height="89dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="144dp"
-        android:background="@drawable/button_bg_round"
-        android:text="Capture"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/camera"
-        app:layout_constraintVertical_bias="0.428" />
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="Take a picture!"/>
 
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
